--- a/authentication/templates/authentication/account.html
+++ b/authentication/templates/authentication/account.html
@@ -12,7 +12,7 @@
         </div>
     </header>
     <!-- User email display section-->
-    <section class="page-section bg-white" id="services">
+    <div class="page-section bg-white" id="services">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
@@ -25,5 +25,5 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 {% endblock %}
