--- a/supersub/templates/supersub/product_detail.html
+++ b/supersub/templates/supersub/product_detail.html
@@ -12,7 +12,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <h6 {% if message.tags %} 
-                                                class="{{ message.tags }}  mb-3""
+                                                class="{{ message.tags }} zl mb-3"
                                             {% endif %}>
                                             {{ message }}
                                         </h6>
