updates based on w3c

--- a/supersub/templates/supersub/product_detail.html
+++ b/supersub/templates/supersub/product_detail.html
@@ -25,7 +25,7 @@
             </div>
         </header>
     <!-- Product dipslay section-->
-    <section class="page-section bg-white text-dark" id="services">
+    <div class="page-section bg-white text-dark" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center">
@@ -52,5 +52,5 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 {% endblock %}
