--- a/authentication/templates/authentication/sign_up.html
+++ b/authentication/templates/authentication/sign_up.html
@@ -12,7 +12,7 @@
         </div>
     </header>
     <!-- Form section-->
-    <section class="page-section bg-white" id="services">
+    <div class="page-section bg-white" id="services">
         <div class="container">
             <div class="row justify-content-center">
                 <form action="{% url 'authentication:sign_up' %}" method="post">
@@ -42,5 +42,5 @@
                 </form>
             </div>
         </div>
-    </section>
+    </div>
 {% endblock %}
