--- a/supersub/templates/supersub/results.html
+++ b/supersub/templates/supersub/results.html
@@ -16,7 +16,7 @@
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section bg-white" id="favorite_section">
+        <div class="page-section bg-white" id="favorite_section">
             <div class="container">
                 <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer ce produit par:  </h4>
                 <hr class="divider my-4" />
@@ -53,7 +53,7 @@
                 </div>
                 {% include 'supersub/pagination.html' %}
             </div>
-        </section>
+        </div>
     {% endif %}
 {% endblock %}
 
